默认样式及优化

--- a/src/global.less
+++ b/src/global.less
@@ -42,6 +42,9 @@ ol {
     margin-right: 8px;
   }
 }
+.ant-pro-basicLayout-content{
+ // margin: 0 !important;
+}
 // 数据列表 搜索条件
 .table-page-search-wrapper {
 
